<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StartActivity">

    <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp" app:srcCompat="@drawable/pink" android:id="@+id/pinkPoint2"
            app:layout_constraintEnd_toStartOf="@+id/pinkPoints" android:layout_marginEnd="8dp"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/orangePoint2"/>
    <ImageView
            android:layout_width="29dp"
            android:layout_height="29dp" app:srcCompat="@drawable/orange" android:id="@+id/orangePoint2"
            app:layout_constraintEnd_toStartOf="@+id/orangePoints" android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/gameNameTitle"/>
    <TextView
            android:text="@string/mg_start_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gameNameTitle" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
    <Button
            android:text="@string/mg_start_startGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startButton" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/rule2"
            android:onClick="onStartButtonClick"/>
    <TextView
            android:text="@string/mg_orange_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/orangePoints" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/gameNameTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/mg_pink_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pinkPoints" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/orangePoints"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/mg_rule1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/rule1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/rulesHeader"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/mg_rule2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/rule2"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/rule3"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/mg_rule3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/rule3"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/rule1"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/mg_rules_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rulesHeader" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/pinkPoints" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
</androidx.constraintlayout.widget.ConstraintLayout>